# practice_models

./: .gitignore  ReadMe.md
CSIRO_image2biomass_prediction/notebooks/: convnext_tiny_2steam.ipynb  model_effb0.ipynb  model_effb0_inference_0.45_.ipynb
backpack_prediction/: ReadMe.md
backpack_prediction/notebooks/: s5e2.ipynb
diabetes_prediction_challenge/notebooks/: s5e12.ipynb  s5e12[cmd_HMN]_LIGHTGBM.ipynb
house_prediction_advanced/: ReadMe.md  requirements.txt
house_prediction_advanced/notebooks/: house-predictions.ipynb
house_pricing/: ReadMe.md  requirements.txt
house_pricing/notebooks/: house-prediction-res-18000.ipynb  house_pricing.ipynb
predict_health_outcomes_of_horses/: .gitignore  README.md  main.py  pyproject.toml  start_cooking.sh
predict_health_outcomes_of_horses/code_base/: Splitter.py  __init__.py  file_operations.py  model.py  optuna_.py  preprocessing.py  score.py
predict_health_outcomes_of_horses/configs/: CFG.py  __init__.py
predict_health_outcomes_of_horses/inference/: __init__.py  inference.py
predict_health_outcomes_of_horses/notebook/: predict-health-outcomes-of-horses.ipynb
predict_health_outcomes_of_horses/scripts/: data_scripts.py  predict_scripts.py  train_scripts.py
predict_health_outcomes_of_horses/train/: __init__.py  train.py
predict_the_Introverts_from_the_extroverts/: s5e4.ipynb
predict_the_Introverts_from_the_extroverts/notebooks/: s5e4.ipynb
predicting_loan_payback/notebooks/: s5e11.ipynb
spaceship_titanic/: ReadMe.md
store_sales_prediction/: ReadMe.md
titanic/: ReadMe.md
(+5 files in other folders)
