[project]
name = "predict_health_outcomes_of_horses"
version = "0.1.0"
description = "Kaggle Competition"
authors = [
    {name = "cmd-HMN",email = "hafizmuhammadnoor01@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "catboost (>=1.2.8,<2.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "xgboost (>=3.0.3,<4.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "optuna (>=4.4.0,<5.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "rich (>=14.1.0,<15.0.0)",
    "cmaes (>=0.12.0,<0.13.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
